# pdftwin

./: .env.example  .gitignore  .vercelignore  README.md  middleware.ts  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: main.py  requirements.txt  test_unicode.py  utils.py
backend/services/: daily_usage.py  docx_to_pdf.py  entitlements.py  image_convert.py  image_resize.py  paypal_service.py  pdf_arrange_merge.py  pdf_common.py  pdf_compress.py  pdf_convert.py  pdf_extract.py  pdf_images.py  pdf_info.py  pdf_lock.py  pdf_merge.py  pdf_reorder.py  pdf_rotate.py  pdf_split.py  pdf_unlock.py  pdf_watermark.py
docs/: README.md
docs/competitive/: ihatepdf.md
docs/product/: i18n.md  implementation-status.md
docs/strategy/: learnings-and-positioning.md  monetization-plan.md  roadmap.md
frontend/: .env.example  astro.config.mjs  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  api.ts  index.css  vite-env.d.ts
frontend/src/components/: ArrangeMergePanel.tsx  BrandLogo.tsx  CheckoutHost.tsx  ClientProcessedBadge.tsx  ComparePanel.tsx  CompressPanel.tsx  ConvertExtractPanel.tsx  ConvertLimitGate.tsx  DraggableOrderList.tsx  ExtractPagesPanel.tsx  FileDropzone.tsx  FileTypeIcons.tsx  IconButton.tsx  ImageConvertPanel.tsx  ImageResizePanel.tsx  ImagesToPdfPanel.tsx  LockUnlockPanel.tsx  MergeBatchGate.tsx  OcrPanel.tsx  OrderActions.tsx  PdfSelectList.tsx  PdfToJpgPanel.tsx  PdfToTextPanel.tsx  (+11 more)
supabase/migrations/: 20260721131000_profiles_and_plans.sql
(+96 files in other folders)
