[project]
name = "pdf-tools"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "python-multipart==0.0.20",
  "pypdf==5.1.0",
  "pdf2docx==0.5.8",
  "pdfplumber==0.11.4",
  "openpyxl==3.1.5",
  "python-docx==1.1.2",
  "pymupdf==1.27.2.3",
]

[tool.vercel]
entrypoint = "api.index:app"

[tool.vercel.scripts]
build = "cd frontend && npm install && npm run build"
